--- a/state-tree/package.json
+++ b/state-tree/package.json
@@ -5,7 +5,7 @@
     "build": "rescript",
     "clean": "rescript clean -with-deps",
     "start": "rescript build -w",
-    "bundle": "esbuild --bundle src/State2.bs.js --outfile=src/app.js",
+    "bundle": "esbuild --bundle src/STree.bs.js --outfile=src/app.js",
     "serve": "python3 -m http.server --directory src"
   },
   "keywords": [
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@rescript/react": "^0.10.3",
+    "react-icons": "^4.3.1",
     "rescript": "*"
   },
   "devDependencies": {
